# flutter_yolo_hyperlpr_plugin

./: .gitignore  .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/lpr/: javaWarpper.cpp
android/src/main/java/com/example/flutter_yolo_hyperlpr_plugin/: CameraView.java  CameraViewFactory.java  FlutterYoloHyperlprPlugin.java  LprHelper.java  LprMain.java
android/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/flutter_yolo_hyperlpr_plugin_example/: MainActivity.java
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_yolo_hyperlpr_plugin.podspec
ios/Classes/: FlutterYoloHyperlprPlugin.h  FlutterYoloHyperlprPlugin.m
lib/: flutter_yolo_hyperlpr_plugin.dart
test/: flutter_yolo_hyperlpr_plugin_test.dart
